# my_cookiecutter_structure_temp

./: README_COOKIE.md  cookiecutter.json
{{cookiecutter.project_slug}}/: ABOUT_STRUCTURE.md  README.md  pyroject.toml  reqiurements.txt  requirements.txt  setup.cfg  setup.py
{{cookiecutter.project_slug}}/src/: logger.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: config.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/utils/: exception.py
